# MML-Companion

./: MML Python, Ch.02 Linear Algebra.ipynb  MML Python, Ch.06 Probability and Distributions.ipynb  MML Python, Ch.07 Continuous Optimization.ipynb  README.md  justfile  pyproject.toml
.ipynb_checkpoints/: MML Python, Ch.03 Analytic Geometry-checkpoint.ipynb  MML Python, Ch.04 Matrix Decompositions-checkpoint.ipynb  MML Python, Ch.05 Vector Calculus-checkpoint.ipynb
